[gd_scene load_steps=2 format=3 uid="uid://dp3pan2ri4doa"]

[ext_resource type="Script" uid="uid://crfx33fovy38l" path="res://UI/pause_menu.gd" id="1_ltd3m"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltd3m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.345098)

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -33.0
offset_right = 75.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Unpause" type="Button" parent="Container"]
layout_mode = 2
text = "Unpause"

[node name="Exit" type="Button" parent="Container"]
layout_mode = 2
text = "Exit To Main Menu"

[connection signal="button_up" from="Container/Unpause" to="." method="_on_unpause_button_up"]
[connection signal="button_up" from="Container/Exit" to="." method="_on_exit_button_up"]
